// Copyright Â© 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package openim.user;

option go_package = "github.com/openimsdk/openmeeting-server/pkg/protocol/user";




message getDesignateUsersReq{
  repeated string userIDs = 1;
}
message getDesignateUsersResp{
  repeated UserInfo usersInfo = 1;
}

message UserInfo{
  string userID = 1;
  string nickname = 2;
}

message userRegisterReq {
  repeated UserInfo users = 2;
}
message userRegisterResp {
}

message userLoginReq {
  string areaCode = 1;
  string phoneNumber = 2;
  string verifyCode = 3;
  string account = 4;
  string password = 5;
  int32 platform = 6;
  string deviceID = 7;
  string email = 8;
}

message userLoginResp {
  string Token = 2;
  string userID = 3;
}

message getUserTokenReq{
  string userID = 1;
}

message getUserTokenResp{
  string token = 1;
}

service user {
  //Get the specified user information full field
  rpc getDesignateUsers(getDesignateUsersReq) returns(getDesignateUsersResp);
  //user registration
  rpc userRegister(userRegisterReq) returns (userRegisterResp);
  //user login
  rpc userLogin(userLoginReq) returns (userLoginResp);
  // get user token
  rpc getUserToken(getUserTokenReq) returns (getUserTokenResp);
}


